--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="navbar-menu.css">
-    <link rel="stylesheet" href="first-hero.css">
-    <link rel="stylesheet" href="second-hero.css">
-    <link rel="stylesheet" href="promo.css">
-    <link rel="stylesheet" href="service.css">
-    <link rel="stylesheet" href="bookset.css">
-    <link rel="stylesheet" href="priceList.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="./navbar-menu.css">
+    <link rel="stylesheet" href="./first-hero.css">
+    <link rel="stylesheet" href="./second-hero.css">
+    <link rel="stylesheet" href="./promo.css">
+    <link rel="stylesheet" href="./service.css">
+    <link rel="stylesheet" href="./bookset.css">
+    <link rel="stylesheet" href="./priceList.css">
+    <link rel="stylesheet" href="./footer.css">
     <title>Document</title>
 </head>
 <body>
